--- a/TransCore/TransCore.vcxproj.filters
+++ b/TransCore/TransCore.vcxproj.filters
@@ -354,5 +354,8 @@
     <Xml Include="Ferians.xml">
       <Filter>Human Space Library</Filter>
     </Xml>
+    <Xml Include="RPGComponents.xml">
+      <Filter>RPG Library</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
