Item list display area

--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -387,7 +387,9 @@
     <Xml Include="Ferians.xml" />
     <Xml Include="HumanSpaceVol01.xml" />
     <Xml Include="Ore.xml" />
-    <Xml Include="RPGComponents.xml" />
+    <Xml Include="RPGComponents.xml">
+      <SubType>Designer</SubType>
+    </Xml>
     <Xml Include="RPGLibrary.xml" />
     <Xml Include="GalaxyLibrary.xml" />
     <Xml Include="StdMiningEquipment.xml" />
