--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -222,7 +222,9 @@
     <None Include="Eridani.xml">
       <SubType>Designer</SubType>
     </None>
-    <None Include="HSCompatibility.xml" />
+    <None Include="HSCompatibility.xml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="HumanSpaceMap.xml" />
     <None Include="Iocrym.xml">
       <SubType>Designer</SubType>
