--- a/TransData/TransData.vcxproj.filters
+++ b/TransData/TransData.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClCompile Include="EncounterFrequency.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CWeaponBenchmarkCtx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -153,6 +156,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Utilities.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ItemBenchmarks.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
