Performance tests for effects

--- a/TransData/TransData.vcxproj
+++ b/TransData/TransData.vcxproj
@@ -307,6 +307,7 @@
     <ClCompile Include="COutputChart.cpp" />
     <ClCompile Include="CSimViewer.cpp" />
     <ClCompile Include="CWeaponBenchmarkCtx.cpp" />
+    <ClCompile Include="EffectPerformanceTest.cpp" />
     <ClCompile Include="Effects.cpp" />
     <ClCompile Include="EncounterCount.cpp" />
     <ClCompile Include="EncounterFrequency.cpp" />
