--- a/TransData/TransData.vcxproj.filters
+++ b/TransData/TransData.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClCompile Include="CWeaponBenchmarkCtx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EffectPerformanceTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
